// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payments displays info alert if claimant has bonding-newborn but not pregnancy claims 1`] = `
<div
  aria-labelledby="alert-heading7"
  class="usa-alert usa-alert--info usa-alert--no-icon margin-bottom-3"
  role="region"
  tabindex="-1"
>
  <div
    class="usa-alert__body"
  >
    <h2
      class="usa-alert__heading font-heading-xs text-bold"
      id="alert-heading7"
    >
      If you are giving birth, you may also be eligible for paid medical leave
    </h2>
    <div
      class="usa-alert__text"
    >
      <p>
        You may be able to take up to 20 weeks of paid medical leave if you’re unable to work during your pregnancy or for your recovery from childbirth. Your health care provider determines how much medical leave you will need. Call the Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
         if you need 
        <a
          href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
          rel="noreferrer noopener"
          target="_blank"
        >
          medical leave after giving birth
        </a>
        . You should not submit a second application.
      </p>
    </div>
  </div>
</div>
`;

exports[`Payments displays info alert if claimant has pregnancy but not bonding claims 1`] = `
<div
  aria-labelledby="alert-heading11"
  class="usa-alert usa-alert--info usa-alert--no-icon margin-bottom-3"
  role="region"
  tabindex="-1"
>
  <div
    class="usa-alert__body"
  >
    <h2
      class="usa-alert__heading font-heading-xs text-bold"
      id="alert-heading11"
    >
      You may also be eligible for paid family leave
    </h2>
    <div
      class="usa-alert__text"
    >
      <p>
        You may be able to take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. 
        <a
          href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
          rel="noreferrer noopener"
          target="_blank"
        >
          Family leave to bond with your child
        </a>
         can be easily added to your claim by calling our Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
        . You should not submit a second application.
      </p>
    </div>
  </div>
</div>
`;

exports[`Payments does not render payments if the is a 404 status 1`] = `
<a
  class="usa-button margin-bottom-5 usa-button--unstyled"
  href="/applications"
>
  <svg
    class="margin-right-05"
    height="12"
    viewBox="0 0 448 512"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
      fill="currentColor"
    />
  </svg>
  Back to your applications
</a>
`;

exports[`Payments renders the \`Your payments\` intro content section 1`] = `
<section
  data-testid="your-payments-intro"
>
  Payments are scheduled to be paid after each week of your leave. Check back weekly to see when your next payment will be scheduled.
  <section
    class="margin-y-5"
    data-testid="estimated-date"
  >
    <h3
      class="font-heading-sm text-bold"
    >
      What does the estimated date mean?
    </h3>
    <p>
      This is the date range we expect to process your direct deposit payment or send your check in the mail. Depending on your bank, expect to receive direct deposit payments in your account 2-3 days after this date. Checks may take 7-11 days to arrive in the mail. Once your payment is processed or your check is sent, that date will be shown in the “date processed” column.
    </p>
  </section>
</section>
`;

exports[`Payments renders the \`changes to payments\` section 1`] = `
<section
  class="margin-y-5"
  data-testid="changes-to-payments"
>
  <h2
    class="margin-bottom-3 font-heading-md text-bold"
  >
    Changes to payments
  </h2>
  <div
    aria-multiselectable="true"
    class="usa-accordion usa-accordion--bordered"
  >
    <h2
      class="usa-accordion__heading margin-y-2"
    >
      <button
        aria-controls="accordion27"
        aria-expanded="false"
        class="usa-accordion__button"
        type="button"
      >
        What may cause a delayed or cancelled payment
      </button>
    </h2>
    <div
      class="usa-accordion__content usa-prose"
      data-testid="accordion27"
      hidden=""
      id="accordion27"
    >
      <p>
        Once your payments have started, expect to be paid weekly for the duration of your leave.
      </p>
      <p>
        <strong>
          What may cause a delayed payment
        </strong>
      </p>
      <p>
        The exact day you receive payment can be delayed because of:
      </p>
      <ul>
        <li>
          State and federal holidays
        </li>
        <li>
          Leave periods that end on weekends
        </li>
        <li>
          Your bank’s processes
        </li>
        <li>
          The process to adjust your benefit amount due to additional income or benefits you or your employer reported
        </li>
        <li>
          Changes to your leave’s start and end dates
        </li>
        <li>
          Other processing issues such as issues with bank account information, or your address
        </li>
      </ul>
      <p>
        <strong>
          What may lead to a cancelled payment
        </strong>
      </p>
      <p>
        Payments can be cancelled due to:
      </p>
      <ul>
        <li>
          Changes to when you end your leave
        </li>
        <li>
          Paid time off taken on days you also receive PFML benefits
        </li>
        <li>
          The process to adjust your benefit amount due to additional income or benefits you or your employer reported may temporarily create a cancelled payment
        </li>
      </ul>
    </div>
    <h2
      class="usa-accordion__heading margin-y-2"
    >
      <button
        aria-controls="accordion28"
        aria-expanded="false"
        class="usa-accordion__button"
        type="button"
      >
        Why your sent payment amount may be less than your approved benefit amount
      </button>
    </h2>
    <div
      class="usa-accordion__content usa-prose"
      data-testid="accordion28"
      hidden=""
      id="accordion28"
    >
      <p>
        To see your maximum weekly benefit amount, view your approval notice in your 
        <a
          href="/applications/status?absence_id=mock-absence-case-id#view_notices"
        >
          application’s notices
        </a>
        .
      </p>
      <p>
        The sent payment amount you see on this page may be less than the maximum benefit amount due to 
        <a
          href="https://www.mass.gov/info-details/how-other-leave-and-benefits-can-affect-your-paid-family-and-medical-leave"
          rel="noopener noreferrer"
          target="_blank"
        >
          other leave, income and benefits
        </a>
         you reported. You will receive another notice in the mail if we reduce your benefit amount.
      </p>
      <p>
        <strong>
          Other scenarios that may change the payment amount you receive are:
        </strong>
      </p>
      <ul>
        <li>
          You or your employer report additional other leave, income or benefits
        </li>
        <li>
          You reach the maximum total amount that you can receive in PFML benefits across multiple applications. The maximum weekly benefit amount is $1084 per week.
        </li>
        <li>
          You receive a payment for a pay period less than a full week
        </li>
      </ul>
    </div>
    <h2
      class="usa-accordion__heading margin-y-2"
    >
      <button
        aria-controls="accordion29"
        aria-expanded="false"
        class="usa-accordion__button"
        type="button"
      >
        Change your payment preference
      </button>
    </h2>
    <div
      class="usa-accordion__content usa-prose"
      data-testid="accordion29"
      hidden=""
      id="accordion29"
    >
      <p>
        To make changes to your payment method or banking information, call the Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
        .
      </p>
    </div>
  </div>
</section>
`;

exports[`Payments renders the \`help\` section containing questions and feedback 1`] = `
<section
  class="margin-y-5"
  data-testid="helpSection"
>
  <h2
    class="font-heading-md text-bold"
  >
    Questions?
  </h2>
  <p>
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
    >
      (833) 344‑7365
    </a>
    .
  </p>
  <h2
    class="font-heading-md text-bold"
  >
    Help us improve payment information by giving feedback
  </h2>
  <p>
    We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
  </p>
  <p>
    <a
      href="https://www.mass.gov/paidleave-claimant-feedback"
      rel="noopener noreferrer"
      target="_blank"
    >
      Take the survey
    </a>
  </p>
</section>
`;

exports[`Payments renders the Payments table 1`] = `
<table
  class="usa-table usa-table--borderless width-full usa-table--stacked"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        Leave dates
      </th>
      <th
        scope="col"
      >
        Payment Method
      </th>
      <th
        scope="col"
      >
        Estimated date
      </th>
      <th
        scope="col"
      >
        Date processed
      </th>
      <th
        scope="col"
      >
        Amount sent
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        data-label="Leave dates"
      >
        11/8/2021 to 11/15/2021
      </td>
      <td
        data-label="Payment Method"
      >
        Check
      </td>
      <td
        data-label="Estimated date"
      >
        Sent
      </td>
      <td
        data-label="Date processed"
      >
        11/15/2021
      </td>
      <td
        data-label="Amount sent"
      >
        $100.00
      </td>
    </tr>
    <tr>
      <td
        data-label="Leave dates"
      >
        11/8/2021 to 11/15/2021
      </td>
      <td
        data-label="Payment Method"
      >
        Check
      </td>
      <td
        data-label="Estimated date"
      >
        11/15/2021 to 11/21/2021
      </td>
      <td
        data-label="Date processed"
      >
        Pending
      </td>
      <td
        data-label="Amount sent"
      >
        $100.00
      </td>
    </tr>
    <tr>
      <td
        data-label="Leave dates"
      >
        11/8/2021 to 11/15/2021
      </td>
      <td
        data-label="Payment Method"
      >
        Check
      </td>
      <td
        data-label="Estimated date"
      >
        Delayed
      </td>
      <td
        data-label="Date processed"
      >
        Delayed
      </td>
      <td
        data-label="Amount sent"
      >
        $100.00
      </td>
    </tr>
    <tr>
      <td
        data-label="Leave dates"
      >
        11/8/2021 to 11/15/2021
      </td>
      <td
        data-label="Payment Method"
      >
        Check
      </td>
      <td
        data-label="Estimated date"
      >
        Sent
      </td>
      <td
        data-label="Date processed"
      >
        11/15/2021
      </td>
      <td
        data-label="Amount sent"
      >
        $100.00
      </td>
    </tr>
    <tr>
      <td
        data-label="Waiting week"
      >
        The first seven (7) days of approved leave are unpaid
      </td>
      <td
        colspan="4"
      >
        Learn more about the 
        <a
          href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#what-is-the-7-day-waiting-period?-"
          rel="noopener noreferrer"
          target="_blank"
        >
          7-day waiting period
        </a>
        .
      </td>
    </tr>
  </tbody>
</table>
`;
